--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
         <meta name="author" content="Jelson J" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Slider using Vanilla JavaScript</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
-        <div id="picture"></div>
+        <div id="wrapper">
+            <div id="picture"></div>
+        </div>
+
+
+        <!--Script-->
+        <script src="./js/app.js"></script>
     </body>
 
 </html>
