--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
 
     <body>
+        <h1>Silider</h1>
         <div id="wrapper">
             <div id="picture"></div>
         </div>
